--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
     <Section class="secao">
         <div class="logo">
-            Logo
+            <a> <img src="Imagens/Logo.png" alt=""></a>
         </div>
         <nav>
                <a> venda</a>
