--- a/Index.html
+++ b/Index.html
@@ -24,9 +24,9 @@
         </nav>
         <hr>
     </Section>
-    <section>
+    <section class="texto1">
         <div>
-            Texto principal
+            <img src="imagens/2984034.png">
         </div>
         <div>
             icones
