--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,9 @@
     <section class="texto1">
         <div>
             <img src="imagens/2984034.png">
+                <div class="circulo1">
+                <a>Valores</a>
+                </div>
         </div>
         <div>
             icones
