--- a/Index.html
+++ b/Index.html
@@ -27,8 +27,10 @@
     <section class="texto1">
         <div>
             <img src="imagens/2984034.png">
-                <div class="circulo1">
-                <a>Valores</a>
+            <div class="circulo1">
+                </div>
+                <div class="circulo2">
+                    <a>Valores</a>
                 </div>
         </div>
         <div>
