--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,10 @@
     </Section>
      
          <section class="texto1"> 
-            <img  src="Imagens/fundo_sec_01.png" alt="">                 
+            <p>
+                <img src="imagens/fundo_sec_01.png">
+            </p> 
+
             <div class="texto_p1">
            <p> Primeiro programa feito 
                para dev
