--- a/Index.html
+++ b/Index.html
@@ -31,13 +31,29 @@
             </p> 
 
             <div class="texto_p1">
+                <hr>
            <p> Primeiro programa feito 
-               para dev
+               <br>para dev come feitos
+               <br>Para landing pages básicas  
            </p>
-
-            </div>   
+           </div>   
+           <div class="texto_p2">
+            <hr>
+       <p> Segunda  programa feito 
+           <br>para dev come feitos
+           <br>Para landing pages básicas  
+       </p>
         </section>
-        
+            <section>
+                <div id="Vendas">
+                    <p class="doc">
+                        Documentado tudo
+                    </p>
+                </div>
+
+
+
+            </section>
 
 
         
