--- a/Index.html
+++ b/Index.html
@@ -47,15 +47,23 @@
             <section>
                 <div id="Vendas">
                     <p class="doc">
-                        Documentado tudo
+                        Documentado tudo e escrecer <br> parq quetudoderja saldjflças
                     </p>
                 </div>
-
-
-
             </section>
+     <section id="tabela">
+        <div>
 
 
+        </div>
+     </section>   
+
+     <section id="serfico">
+        <div>
+
+
+        </div>
+     </section>
         
 
      
