--- a/Index.html
+++ b/Index.html
@@ -52,15 +52,38 @@
                 </div>
             </section>
      <section id="tabela">
-        <div>
+        <div id="item_tabela">
+            <p>caixa 1</p>
 
+        </div>
+        <div id="item_tabela">
+            <p>caixa 2</p>
+
+        </div>
+        <div id="item_tabela">
+            <p>caixa 3</p>
+
+        </div>
+
+        <div id="item_tabela">
+            <p>caixa 4</p>
+
+        </div>
+        <div id="item_tabela">
+            <p>caixa 5</p>
+
+        </div>
+        <div id="item_tabela">
+            <p>caixa 6</p>
 
         </div>
      </section>   
 
      <section id="serfico">
         <div>
-
+                <P>
+                    FSAÇDFLJASDLÇKF
+                </P>
 
         </div>
      </section>
