--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,8 @@
      <section id="serfico">
         <div>
                 <P>
-                    FSAÇDFLJASDLÇKF
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, autem! Voluptatum expedita in nihil, voluptates cum repellendus magnam culpa commodi illo modi vitae esse iste. Eos nisi reprehenderit magni dolores.
+                    Minima soluta assumenda reprehenderit temporibus iusto odit voluptas deleniti? Aperiam laudantium eos, nihil nam molestias ipsa unde est? Dignissimos libero provident nostrum harum cupiditate id quos aspernatur consequatur corporis hic.
                 </P>
 
         </div>
